{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 144,
  "lineage": "e51a40a7-f9be-5e8d-872a-8516c40397cd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devops106_terraform_ksliwa_mongodb_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ca3fed11864d6bb",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0cde71f503f8b6b7f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cde71f503f8b6b7f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops106_ksliwa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00952860868ffa2c3",
            "private_dns": "ip-10-207-202-205.eu-west-1.compute.internal",
            "private_ip": "10.207.202.205",
            "public_ip": "3.249.15.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0947f644a367bea10",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b1f6f12b822792d",
            "tags": {
              "Name": "devops106_terraform_ksliwa_mongodb_server"
            },
            "tags_all": {
              "Name": "devops106_terraform_ksliwa_mongodb_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05fb0cc232e40811c"
            ]
          },
          "dependencies": [
            "aws_security_group.devops106_terraform_ksliwa_sg_mongodb_tf",
            "aws_subnet.devops106_terraform_ksliwa_subnet_mongodb_tf",
            "aws_vpc.devops106_terraform_ksliwa_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devops106_terraform_ksliwa_webserver_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ca3fed11864d6bb",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0d40372915485c6e4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d40372915485c6e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops106_ksliwa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eb782ca3c7539827",
            "private_dns": "ip-10-207-101-65.eu-west-1.compute.internal",
            "private_ip": "10.207.101.65",
            "public_ip": "54.170.175.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03987abddb15728db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01f9d0ff07192a5de",
            "tags": {
              "Name": "devops106_terraform_ksliwa_webserver"
            },
            "tags_all": {
              "Name": "devops106_terraform_ksliwa_webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c749992b6cbeb81"
            ]
          },
          "dependencies": [
            "aws_security_group.devops106_terraform_ksliwa_sg_webserver_tf",
            "aws_subnet.devops106_terraform_ksliwa_subnet_webserver_tf",
            "aws_vpc.devops106_terraform_ksliwa_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops106_terraform_ksliwa_igw_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-078b804e4b1ff4027",
            "id": "igw-078b804e4b1ff4027",
            "owner_id": "135928476890",
            "tags": {
              "Name": "devops106_terraform_ksliwa_igw"
            },
            "tags_all": {
              "Name": "devops106_terraform_ksliwa_igw"
            },
            "vpc_id": "vpc-0069c3e07a2a461df"
          },
          "dependencies": [
            "aws_vpc.devops106_terraform_ksliwa_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "devops106_terraform_ksliwa_nacl_mongodb_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-0e3fbe287db0c5452",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 10000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-0e3fbe287db0c5452",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 10000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 27017
              }
            ],
            "owner_id": "135928476890",
            "subnet_ids": [
              "subnet-00b1f6f12b822792d"
            ],
            "tags": {
              "Name": "devops106_terraform_ksliwa_nacl_public"
            },
            "tags_all": {
              "Name": "devops106_terraform_ksliwa_nacl_public"
            },
            "vpc_id": "vpc-0069c3e07a2a461df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.devops106_terraform_ksliwa_subnet_mongodb_tf",
            "aws_vpc.devops106_terraform_ksliwa_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "devops106_terraform_ksliwa_nacl_public_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-09511e7bee409d1af",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 10000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-09511e7bee409d1af",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 10000,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 8080,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 8080
              }
            ],
            "owner_id": "135928476890",
            "subnet_ids": [
              "subnet-01f9d0ff07192a5de"
            ],
            "tags": {
              "Name": "devops106_terraform_ksliwa_nacl_public"
            },
            "tags_all": {
              "Name": "devops106_terraform_ksliwa_nacl_public"
            },
            "vpc_id": "vpc-0069c3e07a2a461df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.devops106_terraform_ksliwa_subnet_webserver_tf",
            "aws_vpc.devops106_terraform_ksliwa_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops106_terraform_ksliwa_rt_public_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:route-table/rtb-023508bb7c2459978",
            "id": "rtb-023508bb7c2459978",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078b804e4b1ff4027",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0069c3e07a2a461df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops106_terraform_ksliwa_igw_tf",
            "aws_vpc.devops106_terraform_ksliwa_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops106_terraform_ksliwa_assoc_rt_public_subnet101_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fec445a15424e009",
            "route_table_id": "rtb-023508bb7c2459978",
            "subnet_id": "subnet-01f9d0ff07192a5de"
          },
          "dependencies": [
            "aws_internet_gateway.devops106_terraform_ksliwa_igw_tf",
            "aws_route_table.devops106_terraform_ksliwa_rt_public_tf",
            "aws_subnet.devops106_terraform_ksliwa_subnet_webserver_tf",
            "aws_vpc.devops106_terraform_ksliwa_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops106_terraform_ksliwa_assoc_rt_public_subnet202_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a20c40bb3570f43",
            "route_table_id": "rtb-023508bb7c2459978",
            "subnet_id": "subnet-00b1f6f12b822792d"
          },
          "dependencies": [
            "aws_internet_gateway.devops106_terraform_ksliwa_igw_tf",
            "aws_route_table.devops106_terraform_ksliwa_rt_public_tf",
            "aws_subnet.devops106_terraform_ksliwa_subnet_mongodb_tf",
            "aws_vpc.devops106_terraform_ksliwa_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops106_terraform_ksliwa_sg_mongodb_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-05fb0cc232e40811c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05fb0cc232e40811c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "devops106_terraform_ksliwa_sg_mongo",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops106_terraform_ksliwa_sg_webserver"
            },
            "tags_all": {
              "Name": "devops106_terraform_ksliwa_sg_webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-0069c3e07a2a461df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops106_terraform_ksliwa_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops106_terraform_ksliwa_sg_webserver_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-02c749992b6cbeb81",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c749992b6cbeb81",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "devops106_terraform_ksliwa_sg_webserver",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0069c3e07a2a461df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops106_terraform_ksliwa_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops106_terraform_ksliwa_subnet_mongodb_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-00b1f6f12b822792d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.207.202.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b1f6f12b822792d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops106_terraform_ksliwa_subnet_mongodb"
            },
            "tags_all": {
              "Name": "devops106_terraform_ksliwa_subnet_mongodb"
            },
            "vpc_id": "vpc-0069c3e07a2a461df"
          },
          "dependencies": [
            "aws_vpc.devops106_terraform_ksliwa_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops106_terraform_ksliwa_subnet_webserver_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-01f9d0ff07192a5de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.207.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f9d0ff07192a5de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops106_terraform_ksliwa_subnet_webserver"
            },
            "tags_all": {
              "Name": "devops106_terraform_ksliwa_subnet_webserver"
            },
            "vpc_id": "vpc-0069c3e07a2a461df"
          },
          "dependencies": [
            "aws_vpc.devops106_terraform_ksliwa_vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops106_terraform_ksliwa_vpc_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0069c3e07a2a461df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.207.0.0/16",
            "default_network_acl_id": "acl-02d97503496855d7c",
            "default_route_table_id": "rtb-042af3c8b243987a6",
            "default_security_group_id": "sg-08e60f079b8b37d69",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0069c3e07a2a461df",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042af3c8b243987a6",
            "owner_id": "135928476890",
            "tags": {
              "Name": "devops106_terraform_ksliwa_vpc"
            },
            "tags_all": {
              "Name": "devops106_terraform_ksliwa_vpc"
            }
          }
        }
      ]
    }
  ]
}